# mphf_benchmark

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  configure.sh
include/: bbhash_wrapper.hpp  chd_wrapper.hpp  emphf_hem_wrapper.hpp  emphf_wrapper.hpp  fch.hpp  pthash_wrapper.hpp  recsplit_wrapper.hpp  utils.hpp
include/base_hasher/: base_hasher.hpp  murmur2_base_hasher.hpp
include/fch_utils/: buckets.hpp  compact_container.hpp  compact_vector.hpp  unbalanced_bucketer.hpp
include/hasher/: hasher.hpp
src/: mphf_benchmark.cpp
